feat(service_ports): get one
