# api/docs/swagger.json
@@ -72,6 +72,37 @@
                 }
             }
         },
+        "/ports/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Service Ports"
+                ],
+                "summary": "Get a port",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Service Port ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ServicePortResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/services/{id}": {
             "get": {
                 "consumes": [
@@ -194,7 +225,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.ServiceResponse"
+                                "$ref": "#/definitions/models.ServicePortResponse"
                             }
                         }
                     }
@@ -472,6 +503,20 @@
                 },
                 "positionY": {
                     "type": "number"
+                }
+            }
+        },
+        "models.ServicePortResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "private": {
+                    "type": "integer"
+                },
+                "public": {
+                    "type": "integer"
                 }
             }
         },
